force-app/main/default/objects/HL_Contact_Affiliation__c/HL_Contact_Affiliation__c.object-meta.xml
<CustomObject>
    <description>Junction object between HL Internal Contacts and other objects. Used for things like the contact related lists in NBC form.</description>
    <label>HL Contact Affiliation</label>
    <nameField>
        <displayFormat>HLCA-{0000}</displayFormat>
        <label>HL Contact Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL Contact Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>