force-app/main/default/objects/HL_Contact_Affiliation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Approval - NBC</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Engagement Counterparty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>