force-app/main/default/objects/HL_Contact_Affiliation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Contact Affiliations</relationshipLabel>
    <relationshipName>HL_Contact_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>