force-app/main/default/objects/HL_Contact_Affiliation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>HL Contact Affiliations</relationshipLabel>
    <relationshipName>HL_Contact_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>